# 42sh

./: .42shrc  .gitignore  .vimrc  .ycm_extra_conf.py  42make  CMakeLists.txt  Makefile  README.md  author  leaks_bugs_segflts.md  objc.supp  todo.md
include/: shell.h
include/headers/: expr.h  lexer.h  lexer_tools.h  parser.h
includes/: 42sh.h  array.h  autocomplete.h  autocomplite.h  builtins.h  calc.h  conditions.h  execute.h  expr.h  expression.h  exprlexer.h  extention.h  init_shell.h  lexer.h  lib.h  libshell.h  parser.h  readline.h  sh.h  shell.h  signals.h  term.h  terminals.h  tests.h  tools.h
srcs/: lexgen.txt  minishell_lib.c  minishell_parser.c  rlexer.c  shell.c
srcs/autocomplete/: autocomplete.c  autocomplete_backslashing.c  autocomplete_files_or_dirs.c  autocomplete_flags.c  autocomplete_get_type.c  autocomplete_only_exec.c  autocomplete_other.c  autocomplite_builtins.c  autocomplite_env.c  autocomplite_files_and_dirs.c  autocomplite_functions.c  autocomplite_in_hash.c  autocomplite_lib.c  autocomplite_specific_cases.c  beautifylizing_flags_output.c  clever_autocomplete_checks.c  main_and_debug.c  post_procession.c  pre_procession.c  processing_hidden_files.c
srcs/autocomplite/: autocomplete.c  autocomplite.c  main_and_debug.c
srcs/builtins/: built_alias.c  built_alias_reqmts.c  built_bg.c  built_cd.c  built_cd_reqmts.c  built_echo.c  built_echo_reqmts.c  built_env.c  built_exit.c  built_export.c  built_fc.c  built_fc_case_default.c  built_fc_case_e.c  built_fc_case_l.c  built_fc_case_s.c  built_fc_reqmts.c  built_fc_write_lines.c  built_fg.c  built_hash.c  built_hash_reqmts.c  built_jobs.c  built_set.c  built_set_rqmts.c  built_setenv.c  built_test.c  built_type.c  built_type_reqmts.c  built_unalias.c  built_unset.c  built_unset_reqmts.c  built_unsetenv.c  builtin_fc.c
srcs/conditions/: Makefile  b_to_g_conditions.c  cond_flags_switcher.c  cond_print_errors.c  cond_string_sheets.c  conditions.c  l_to_s_conditions.c  main_and_debug.c  num_conditions.c  strings_conditions.c  strsplit_conditions.c  (+1 more)
srcs/execute/extention/: CMakeLists.txt  extention  extention.c  extention.h  functions_to_write.c  makefile  old_make  strsplit_for_extention.c
srcs/extention/: CMakeLists.txt  arithm_extention.c  configurate_of_exptention.c  configure_remalloc.c  debug_and_main.c  extention  extention.c  extention.h  get_fd_of_redirs.c  get_true_format.c  norma_fucking_sheet.c  old_make  oldextention.h  pre_processings.c  psevdo-functions.c  psevdo_functions.c  remove_suffix_prefix_patterns.c  spec_cases.c  stars.c  string_processing_stars.c  strins_sheets.c  strsplit_for_extention.c  swither_to_expand.c
srcs/lexer/: CMakeLists.txt  Makefile  dfa_tools.c  lexer  lexer.c  lexer_stable.c  lexer_tools.c  lexgen.txt  main.c  regexp_to_dfa  trim_quotes.c  trim_quotes1.c
srcs/lexer/symbol_table_generator/: lex.pp  lexgen.py  lexgen.txt
srcs/lib/libalias/: CMakeLists.txt
srcs/lib/libalias/includes/: libalias.h
srcs/lib/libalias/srcs/: alias_clean.c  alias_delete.c  alias_find.c  alias_foreach.c  alias_free_fields.c  alias_index.c  alias_init.c  alias_insert.c  alias_print.c  alias_realloc.c  alias_search.c  alias_tools.c
srcs/lib/libft/: CMakeLists.txt  Makefile  libft.cbp
srcs/lib/libft/asmsrcs/: ft_memset.s.old
srcs/lib/libft/includes/: get_next_line.h  libft.h
srcs/lib/libft/srcs/: fatal_error.c  ft_atoi.c  ft_atoi_base.c  ft_btree_count.c  ft_btree_del.c  ft_btree_infix.c  ft_btree_ins.c  ft_btree_new.c  ft_btree_prefix.c  ft_btree_search.c  ft_btree_sort.c  ft_btree_suffix.c  ft_bzero.c  ft_charsize.c  ft_clearvect.c  ft_err_msg.c  ft_free.c  ft_is_non_alnumspace.c  ft_is_space_tab.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblank.c  ft_iscntrl.c  ft_isdigit.c  ft_isgraph.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_isxdigit.c  ft_itoa.c  ft_itoa_base.c  ft_joinvect.c  ft_listdel.c  ft_listlast.c  ft_listlen.c  ft_listnew.c  ft_ltoa.c  ft_memalloc.c  (+80 more)
srcs/lib/libhash/: CMakeLists.txt  Makefile  libhash.cbp
srcs/lib/libhash/includes/: libhash.h
srcs/lib/libhash/srcs/: hash_clean.c  hash_delete.c  hash_find.c  hash_foreach.c  hash_free_fields.c  hash_function_djb2.c  hash_function_eq_djb2.c  hash_get_len.c  hash_get_size.c  hash_index.c  hash_init.c  hash_insert.c  hash_print.c  hash_realloc.c  hash_search.c  hash_test.c
srcs/lib/libshell/: CMakeLists.txt  check_varname.c  free_str_arr.c  glob.c  keyvaluecmp.c  libshell.cbp  match.c  print_str_arr.c  serror.c  sgetenv.c  sgetpath.c  split_env.c  sputerr.c  ssetenv.c  sstrerr.c  sunsetenv.c  xmalloc.c  xrealloc.c
srcs/lib/libshell/includes/: libshell.h
srcs/lib/libshell/srcs/: check_valid_of_variable.c  check_varname.c  die.c  fill_genv.c  free_str_arr.c  get_cmd_path.c  get_file_size.c  glob.c  match.c  octal_to_decimal.c  print_str_arr.c  sgetenv.c  sgetpath.c  size_str_arr.c  split_assignments.c  split_env.c  sputcmderr.c  sputerr.c  ssetenv.c  sstrerr.c  sunsetenv.c  xglob.c  xmatch.c
srcs/lib/libstring/: CMakeLists.txt
srcs/lib/libstring/includes/: libstring.h
srcs/lib/libstring/srcs/: string_free.c  string_init.c  string_insert.c  string_join.c  string_push.c  string_resize.c
srcs/lib/libut/: CMakeLists.txt  Makefile
srcs/lib/libut/includes/: libut.h  ut_utils.h
srcs/lib/libut/srcs/: ut_add_test.c  ut_assert_test.c  ut_clean_test.c  ut_init_test.c  ut_run_test.c
srcs/lib/libut/srcs/internal/: ut_ret.c  ut_write.c
srcs/lib/vector/: CMakeLists.txt  Makefile  libvector.cbp
srcs/lib/vector/includes/: vector.h
srcs/lib/vector/srcs/: ft_ceil.c  ft_ceill.c  ft_floorl.c  queue_back.c  queue_create.c  queue_free.c  queue_front.c  queue_push_back.c  vector_back.c  vector_create.c  vector_del_elem.c  vector_foreach.c  vector_free.c  vector_front.c  vector_get_elem.c  vector_get_len.c  vector_is_empty.c  vector_pop_back.c  vector_push_back.c  vector_to_array.c
tests/: basic.right  basic.tests  basic.traces  runtest.sh
tests/lexer_tests/: CMakeLists.txt  Makefile  lexer_tests.c  tests  trim_quotes_tests.c
valerablya/: check_valid_of_variable.c
(+1195 files in other folders)
