cmake_minimum_required(VERSION 3.13)
project(libft)

set(NAME ft)
set(SRC_LIB srcs/fatal_error.c
        srcs/ft_atoi.c
		srcs/ft_ltoa.c
        srcs/ft_btree_count.c
        srcs/ft_btree_del.c
        srcs/ft_btree_infix.c
        srcs/ft_btree_ins.c
        srcs/ft_btree_new.c
        srcs/ft_btree_prefix.c
        srcs/ft_btree_search.c
        srcs/ft_btree_sort.c
        srcs/ft_btree_suffix.c
        srcs/ft_bzero.c
        srcs/ft_charsize.c
        srcs/ft_err_msg.c
        srcs/ft_isalnum.c
        srcs/ft_isalpha.c
        srcs/ft_isascii.c
        srcs/ft_isblank.c
        srcs/ft_iscntrl.c
        srcs/ft_isdigit.c
        srcs/ft_isgraph.c
        srcs/ft_islower.c
        srcs/ft_isprint.c
        srcs/ft_isspace.c
        srcs/ft_isupper.c
        srcs/ft_isxdigit.c
        srcs/ft_itoa.c
        srcs/ft_itoa_base.c
        srcs/ft_listlast.c
        srcs/ft_listnew.c
		srcs/ft_listdel.c
        srcs/ft_memalloc.c
		srcs/ft_free.c
        srcs/ft_memccpy.c
        srcs/ft_memchr.c
        srcs/ft_memcmp.c
        srcs/ft_memcpy.c
        srcs/ft_memdel.c
        srcs/ft_memdup.c
        srcs/ft_memmove.c
        srcs/ft_memset.c
        srcs/ft_numlen.c
        srcs/ft_pathadd.c
        srcs/ft_pop.c
        srcs/ft_pow.c
        srcs/ft_push.c
        srcs/ft_push_back.c
        srcs/ft_putchar.c
        srcs/ft_putchar_fd.c
        srcs/ft_putendl.c
        srcs/ft_putendl_fd.c
        srcs/ft_putnbr.c
        srcs/ft_putnbr_fd.c
        srcs/ft_putnbrendl.c
        srcs/ft_putnchr.c
        srcs/ft_putstr.c
        srcs/ft_putstr_fd.c
        srcs/ft_str_is_alpha.c
        srcs/ft_str_is_lowercase.c
        srcs/ft_str_is_number.c
        srcs/ft_str_is_numeric.c
        srcs/ft_str_is_printable.c
        srcs/ft_str_is_uppercase.c
        srcs/ft_stradd.c
        srcs/ft_strcat.c
        srcs/ft_strchr.c
        srcs/ft_strclr.c
        srcs/ft_strcmp.c
        srcs/ft_strcolor.c
        srcs/ft_strcpy.c
        srcs/ft_strdel.c
        srcs/ft_strdup.c
        srcs/ft_strequ.c
        srcs/ft_striter.c
        srcs/ft_striteri.c
        srcs/ft_strjoin.c
        srcs/ft_strlcat.c
        srcs/ft_strlen.c
        srcs/ft_strlowcase.c
        srcs/ft_strmap.c
        srcs/ft_strmapi.c
        srcs/ft_strncat.c
        srcs/ft_strncmp.c
        srcs/ft_strncpy.c
        srcs/ft_strndup.c
        srcs/ft_strnequ.c
        srcs/ft_strnew.c
        srcs/ft_strnstr.c
        srcs/ft_strnum.c
        srcs/ft_strnum_base.c
        srcs/ft_strrchr.c
        srcs/ft_strrev.c
        srcs/ft_strsplit.c
        srcs/ft_strstr.c
        srcs/ft_strsub.c
        srcs/ft_strtrim.c
        srcs/ft_strupcase.c
        srcs/ft_tolower.c
        srcs/ft_toupper.c
        srcs/xmalloc.c
        srcs/xrealloc.c
		srcs/ft_joinvect.c srcs/ft_atoi_base.c)
include_directories(includes)

add_library(${NAME} STATIC ${SRC_LIB})
